# ROM

./: .dockerignore  .env.example  .env.full.example  .env.full.local.example  .gitignore  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  DIPLOMA_MAXIM_ADAPTED.md  DIPLOMA_TODO.md  Dockerfile  EUROPEAN_SOURCE_FOCUS.md  MAILTRAP_SETUP.md  Makefile  OPPORTUNITY_SOURCES.md  ORCID_OAUTH_SETUP.md  README.md  README_UA.md  SECURITY_HARDENING_NOTES.md  USER_GUIDE_UA.md  V1_ENHANCEMENT_PLAN.md  alembic.ini  docker-compose.yml  example.txt  found_issues.txt  ideas.txt  inspect_docx.py  plantuml_domain_diagrams.txt  pyproject.toml  Дипломна Максим.docx  Мій_неймовірний_диплом_V1 (4).docx
app/: __init__.py  main.py
app/api/: admin.py  application_assistant.py  auth.py  dependencies.py  errors.py  jobs.py  (+11 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py  script.py.mako
scripts/: backup-postgres.ps1  performance-check.ps1  restore-postgres.ps1  run-full-app.ps1  send-test-email.py
tests/: conftest.py  test_admin_ops.py  test_advisor_provider.py  test_api_professionalization.py  test_application_assistant.py  test_application_use_cases.py  test_auth.py  test_bulk_import.py  test_external_sources.py  test_grants_gov.py  test_notifications.py  test_openalex.py  test_opportunity_filters.py  test_opportunity_page_preview.py  test_orcid.py  test_profile_details.py  test_profile_discovery.py  test_recommendations.py  test_reminders.py  test_requirement_extraction.py  test_search_infrastructure_contracts.py  test_statuses.py  test_web_research.py
(+194 files in other folders)
