[project]
name = "research-opportunity-matcher"
version = "0.1.0"
description = "MVP backend for personalized academic grants and exchange opportunities."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "duckduckgo-search>=6.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "rq>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.4.0",
    "ddgs (>=9.14.4,<10.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
